--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "author": "kaeru2193",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "csv-parse": "^5.6.0",
     "csv-stringify": "^6.5.2",
     "discord.js": "^14.19.3",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "typescript": "^5.8.3"
   }
 }
