--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "npm install && tsc"
   },
   "author": "kaeru2193",
   "license": "ISC",
